Update rubocop TODO to 0.46.0

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,12 +3,14 @@ inherit_from:
   - .rubocop_todo.yml
 
 AllCops:
-  RunRailsCops: true # always run the rails cops
   Include:
     - 'app/views/api/**/*.rabl'
   Exclude:
     - 'db/schema.rb'
     - 'vendor/**/*'
+
+Rails:
+  Enabled: true
 
 # Don't enforce documentation
 Style/Documentation:
