Update gettext extraction to current standard
This copies the infra changes that were made to foreman_plugin_template
back in 2016 to deal with gettext 3.1.13.

--- a/.tx/config
+++ b/.tx/config
@@ -2,7 +2,7 @@
 host = https://www.transifex.com
 
 [foreman.foreman_setup]
-file_filter = locale/<lang>/foreman_setup.po
+file_filter = locale/<lang>/foreman_setup.edit.po
 source_file = locale/foreman_setup.pot
 source_lang = en
 type = PO
