--- a/.tx/config
+++ b/.tx/config
@@ -1,8 +1,11 @@
 [main]
-host = https://www.transifex.com
+host = https://app.transifex.com
 
-[foreman.foreman_setup]
-file_filter = locale/<lang>/foreman_setup.edit.po
-source_file = locale/foreman_setup.pot
-source_lang = en
-type = PO
+[o:foreman:p:foreman:r:foreman_setup]
+file_filter            = locale/<lang>/foreman_setup.edit.po
+source_file            = locale/foreman_setup.pot
+source_lang            = en
+type                   = PO
+replace_edited_strings = false
+keep_translations      = false
+minimum_perc           = 50
